# tetris-2d-raylib

./: .gitignore  CMakeLists.txt  README.md
Framework/: CMakeLists.txt
Framework/Batch/: Build.bat  Generate.bat
Framework/Script/: cli.py  cmake_helper.py  config.py  logger.py
Framework/Source/: CMakeLists.txt
Framework/Source/Inc/: GameAssert.h  GameLogging.h  GameMacro.h
Game/: CMakeLists.txt
