cmake_minimum_required(VERSION 3.30.3)

set(GAME_PROJECT_NAME "Game")
set(GAME_NAME "Tetris2D")
set(GAME_PROJECT_PATH ${CMAKE_CURRENT_SOURCE_DIR})

set(GAME_SOURCE_PATH "${GAME_PROJECT_PATH}/Source")
set(GAME_PROJECT_HEADER_FILE_PATH "${GAME_SOURCE_PATH}/Inc")
set(GAME_PROJECT_SOURCE_FILE_PATH "${GAME_SOURCE_PATH}/Src")

file(GLOB_RECURSE GAME_SOURCE "${GAME_SOURCE_PATH}/**")
file(GLOB_RECURSE GAME_HEADER_FILE "${GAME_PROJECT_HEADER_FILE_PATH}/**")
file(GLOB_RECURSE GAME_SOURCE_FILE "${GAME_PROJECT_SOURCE_FILE_PATH}/**")

add_executable(${GAME_PROJECT_NAME} ${GAME_SOURCE} ${GAME_HEADER_FILE} ${GAME_SOURCE_FILE})
target_include_directories(${GAME_PROJECT_NAME} PUBLIC ${GAME_PROJECT_HEADER_FILE_PATH} ${GAME_PROJECT_SOURCE_FILE_PATH} ${RAYGUI_INCLUDE_DIRS})
target_link_libraries(${GAME_PROJECT_NAME} PUBLIC Framework)

target_compile_definitions(
    ${GAME_PROJECT_NAME}
    PUBLIC
    $<$<CONFIG:Debug>:DEBUG_MODE>
    $<$<CONFIG:Release>:RELEASE_MODE>
    $<$<CONFIG:RelWithDebInfo>:RELWITHDEBINFO_MODE>
    $<$<CONFIG:MinSizeRel>:MINSIZEREL_MODE>
)

set_target_properties(${GAME_PROJECT_NAME} PROPERTIES
    OUTPUT_NAME "${GAME_NAME}_$<CONFIG>"
)

set_property(TARGET ${GAME_PROJECT_NAME} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
set_property(TARGET ${GAME_PROJECT_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")

source_group(TREE "${GAME_SOURCE_PATH}" PREFIX "Source" FILES ${GAME_SOURCE})
source_group(TREE "${GAME_PROJECT_HEADER_FILE_PATH}" PREFIX "Source/Inc" FILES ${GAME_HEADER_FILE})
source_group(TREE "${GAME_PROJECT_SOURCE_FILE_PATH}" PREFIX "Source/Src" FILES ${GAME_SOURCE_FILE})